# real-estate-analyzer

./: .gitignore  README.md  USAGE.md  app.py  data_processing.py  main.py  process_sales_data.py  pyproject.toml
data/: dvf65.parquet  readme.md
resources/: communes-occitanie.geojson:Zone.Identifier
ui_components/: demographics_page.py  market_trends_page.py  price_map_page.py  property_map_page.py  sidebar.py
