[project]
name = "market-analyzer"
version = "0.1.0"
description = "Real estate market analyzer using meilleursagents.com data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.30.0",
    "ruff>=0.11.10",
    "streamlit>=1.45.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "geopy>=2.3.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
    "plotly>=6.1.1",
    "streamlit-folium>=0.25.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
